Fixed xml escaping/unescaping RSS/Atom readers and depot handle items in reverse (proper) order TimerManager checks on init to get initial items (untested on some readers)

--- a/TODO
+++ b/TODO
@@ -1,7 +1,8 @@
 - Cleanup and standardization of Items
 - Depot getters
-- IOError checks in RSSDepot
 - Unique IDs for Managers
 - logging module
 - force manager updates
 - Admin interface
+- RSSDepot: limit size of output file
+- Set up under pylons
